# rocket-slog-fairing

./: .gitlab-ci.yml  Cargo.toml  README.adoc  gitlab-ci.yml
examples/: app.rs
src/: lib.rs
