[package]
name = "rocket-slog"
version = "0.3.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "GPL-3.0"
repository = "https://gitlab.com/pwoolcoc/rocket-slog-fairing"
homepage = "https://gitlab.com/pwoolcoc/rocket-slog-fairing"
description = """
Provides a fairing for use in rocket.rs applications that allows the user to use a slog `Logger` in place of the built-in rocket.rs logging system
"""
documentation = "http://pwoolcoc.gitlab.io/rocket-slog-fairing/rocket_slog/index.html"

[dependencies]
slog = "2.4.1"
rocket = "0.3.17"

[dev-dependencies]
rocket_codegen = "0.3.17"
sloggers = "0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--no-deps"]
